@@ -10,6 +10,9 @@
     <method name="Quit">
     </method>
     
+    <method name="Restart">
+    </method>
+    
     <method name="GetConfig">
 	<arg direction="out" name="system_laptop" type="b"/>
 	<arg direction="out" name="user_privilege" type="b"/>
