@@ -1,4 +1,7 @@
 
+2009-03-21  0:02 Ali aliov@xfce.org 
+	 * : Added command line option to restart the power manager
+
 2009-03-20 17:16 Ali aliov@xfce.org 
 	 * : -m
 
